# pdfparse

./: .gitignore  LICENSE  README.md  TEST_COVERAGE_SUMMARY.md  pyproject.toml  run_tests.py  setup.py
src/pdfparse/: __init__.py  cli.py  html_to_pdf.py  pdf_to_text.py
tests/: README.md  __init__.py  conftest.py  create_test_pdf.py  test_cli.py  test_html_to_pdf.py  test_integration_workflow.py  test_pdf_to_text.py
tests/test_data/: example.html  sample_document.html
